# numpy-vector-store

./: README.md  justfile  pyproject.toml
.github/workflows/: publish-pypi.yml  publish-testpypi.yml
src/numpy_vector_store/: __init__.py  vector_store.py
tests/: __init__.py  test_vector_store.py
