[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "numpy-vector-store"
version = "0.1.0"
description = "A fast, lightweight, and zero-setup in-memory vector store powered by NumPy"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Tim VanReenen"},
]
keywords = ["vector", "store", "numpy", "embeddings", "search"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy>=1.20.0",
]


[project.urls]
Homepage = "https://github.com/tvanreenen/numpy-vector-store"
Repository = "https://github.com/tvanreenen/numpy-vector-store"
Issues = "https://github.com/tvanreenen/numpy-vector-store/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/numpy_vector_store"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["numpy_vector_store"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "pytest-cov>=4.0.0",
    "ruff>=0.13.3",
]

